crates/inertia-axum-macros/tests/ui/fail/invalid_typegen_path.rs
use inertia_axum_macros::InertiaProps;

#[derive(InertiaProps)]
#[inertia(typegen(path = "../outside.ts"))]
struct Props { title: String }

fn main() {}
